Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123378

QML TextInput makes the application unresponsive if made invisible when it has keyboard focus on Android

    XMLWordPrintable

Details

    • Android
    • 9d8c74985 (dev), e1d63710c (6.7), 14dda009c (tqtc/lts-6.5)
    • 2024wk14FOQtforAndroid

    Description

      QML TextInput make the application irresponsive if made invisible when it has keyboard focus on Android.

      Steps to reproduce in attached code:

      • Enter text in field "777"
      • Hide keyboard
      • Click "Hide/show" button
      • Observe hang
      • Can confirm hang by platform text teardrop not disappearing or by rotating device

      Note that the crash also happens if the input is not numeric.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ivan.solovev Ivan Solovev
            tomana Tom Nœrland
            Votes:
            2 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes